# OpenSuperWhisper

./: .gitmodules  Bridge.h  Readme.md  TRIAGE.md  appcast-x86_64.xml  appcast.xml  notarize_app.sh  run.sh
OpenSuperWhisper/: AppContextModelRules.swift  AppContextSettingsView.swift  AppPickerSheet.swift  AppleSpeechModelSection.swift  AudioRecorder.swift  CLI.swift  ContentView.swift  DictationPipeline.swift  FileDropHandler.swift  LLMModelManager.swift  Localizable.xcstrings  MediaPlaybackController.swift  MicrophoneService.swift  ModelCatalog.swift  ModelSelectionStore.swift  MouseButtonMonitor.swift  OpenSuperWhisper-Info.plist  OpenSuperWhisperApp.swift  RemoteCleanupSettingsView.swift  RemoteModelListBox.swift  RemoteServerSettingsView.swift  RemoteSettingsSection.swift  RemoteUserPresets.swift  SenseVoiceModelSection.swift  Settings.swift  SettingsStores.swift  SettingsTheme.swift  ShortcutManager.swift  ShortcutRecorderField.swift  TranscriptionQueue.swift  TranscriptionService.swift  TranscriptionSettings.swift  UpdatesView.swift  WhisperModelManager.swift
OpenSuperWhisper-iOS/: ContentView.swift  OpenSuperWhisper-iOS-Info.plist  OpenSuperWhisper-iOS.entitlements  OpenSuperWhisper_iOSApp.swift
OpenSuperWhisper-iOSTests/: OpenSuperWhisper_iOSLaunchTests.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
OpenSuperWhisperTests/: AppContextFormattingTests.swift  AppContextModelRulesTests.swift  AppContextRuleKeyTests.swift  AppDelegateConsentWiringTests.swift  AppPreferencesMigrationTests.swift  CLIConsentIsolationTests.swift  CaretAnchorDecisionTests.swift  ClipboardRestoreTests.swift  ContextAwareModelModeTests.swift  CustomDictionaryBoostTermsTests.swift  DiagTests.swift  DictationPipelineTests.swift  DictionaryBoostGateTests.swift  EngineFactoryMappingTests.swift  ErrorFeedbackTests.swift  GroqPresetTests.swift  IndicatorLayoutRecursionTests.swift  LLMCleanupEndpointTests.swift  OpenSuperWhisperTests.swift  PasteTargetDetectionTests.swift  (+19 more)
libwhisper/: CMakeLists.txt
libwhisper/whisper-modulemap/: module.modulemap
(+73 files in other folders)
